unpackaged/main/default/objects/simplesms__SMS_Message__c/simplesms__SMS_Message__c.object-meta.xml
<CustomObject>
    <label>SMS Message</label>
    <nameField>
        <displayFormat>SMS-{00000}</displayFormat>
        <label>SMS Message Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SMS Messages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>