unpackaged/main/default/objects/simplesms__SMS_Message__c/fields/Attendee__c.field-meta.xml
<CustomField>
    <fullName>Attendee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attendee</label>
    <referenceTo>conference360__Attendee__c</referenceTo>
    <relationshipLabel>SMS Messages</relationshipLabel>
    <relationshipName>SMS_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>