unpackaged/main/default/objects/simplesms__SMS_Message__c/fields/simplesms__Account__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related account.</description>
    <inlineHelpText>The related account.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SMS Messages (Account)</relationshipLabel>
    <relationshipName>SMSMessages</relationshipName>
    <type>Lookup</type>
</CustomField>