unpackaged/main/default/objects/simplesms__SMS_Message__c/fields/simplesms__AllReferenceId__c.field-meta.xml
<CustomField>
    <fullName>simplesms__AllReferenceId__c</fullName>
    <label>All Reference Ids</label>
    <type>TextArea</type>
</CustomField>