unpackaged/main/default/objects/simplesms__SMS_Message__c/fields/simplesms__Bulk_Message__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Bulk_Message__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A flag that denotes whether this message was sent as part of a bulk message.</description>
    <inlineHelpText>A flag that denotes whether this message was sent as part of a bulk message.</inlineHelpText>
    <label>Bulk Message</label>
    <type>Checkbox</type>
</CustomField>