unpackaged/main/default/objects/simplesms__SMS_Message__c/fields/simplesms__Case__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related Case.</description>
    <inlineHelpText>The related Case.</inlineHelpText>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>SMS Messages</relationshipLabel>
    <relationshipName>SMS_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>