unpackaged/main/default/objects/simplesms__SMS_Message__c/fields/simplesms__Clicks__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Clicks__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of times the tracked link(s) were clicked.</description>
    <inlineHelpText>The number of times the tracked link(s) were clicked.</inlineHelpText>
    <label>Clicks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>