unpackaged/main/default/objects/simplesms__SMS_Message__c/fields/simplesms__Contact__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related Contact.</description>
    <inlineHelpText>The related Contact.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>SMS Messages (Contact)</relationshipLabel>
    <relationshipName>SMS_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>