unpackaged/main/default/objects/simplesms__SMS_Message__c/fields/simplesms__Conversation__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Conversation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conversation</label>
    <referenceTo>simplesms__Conversation__c</referenceTo>
    <relationshipLabel>SMS Messages</relationshipLabel>
    <relationshipName>SMS_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>