unpackaged/main/default/objects/simplesms__SMS_Message__c/fields/simplesms__CRM_Id__c.field-meta.xml
<CustomField>
    <fullName>simplesms__CRM_Id__c</fullName>
    <description>An external identifier for the message.</description>
    <externalId>true</externalId>
    <inlineHelpText>An external identifier for the message.</inlineHelpText>
    <label>CRM Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>