unpackaged/main/default/objects/simplesms__SMS_Message__c/fields/simplesms__Error_Message__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Error_Message__c</fullName>
    <description>A description of the error.</description>
    <inlineHelpText>A description of the error.</inlineHelpText>
    <label>Error Message</label>
    <type>TextArea</type>
</CustomField>