unpackaged/main/default/objects/simplesms__SMS_Message__c/fields/simplesms__First_Click__c.field-meta.xml
<CustomField>
    <fullName>simplesms__First_Click__c</fullName>
    <description>The time of the first link click.</description>
    <inlineHelpText>The time of the first link click.</inlineHelpText>
    <label>First Click</label>
    <type>DateTime</type>
</CustomField>