unpackaged/main/default/objects/simplesms__SMS_Message__c/fields/simplesms__From_Num__c.field-meta.xml
<CustomField>
    <fullName>simplesms__From_Num__c</fullName>
    <description>The phone number that originated the message.</description>
    <inlineHelpText>The phone number that originated the message.</inlineHelpText>
    <label>From</label>
    <length>80</length>
    <type>Text</type>
</CustomField>