unpackaged/main/default/objects/simplesms__SMS_Message__c/fields/simplesms__From_Phone__c.field-meta.xml
<CustomField>
    <fullName>simplesms__From_Phone__c</fullName>
    <description>The From number converted to a Phone field.</description>
    <inlineHelpText>The From number converted to a Phone field.</inlineHelpText>
    <label>From Phone</label>
    <type>Phone</type>
</CustomField>