unpackaged/main/default/objects/simplesms__SMS_Message__c/fields/simplesms__Hash__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Hash__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Deprecated.</description>
    <externalId>true</externalId>
    <inlineHelpText>Deprecated.</inlineHelpText>
    <label>Hash</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>