unpackaged/main/default/objects/simplesms__SMS_Message__c/fields/simplesms__Is_Final_Response__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Is_Final_Response__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flags this message as the final response in an automated conversation.</description>
    <inlineHelpText>Flags this message as the final response in an automated conversation.</inlineHelpText>
    <label>Is Final Response</label>
    <type>Checkbox</type>
</CustomField>