unpackaged/main/default/objects/simplesms__SMS_Message__c/fields/simplesms__Last_Click__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Last_Click__c</fullName>
    <description>The time of the last link click.</description>
    <inlineHelpText>The time of the last link click.</inlineHelpText>
    <label>Last Click</label>
    <type>DateTime</type>
</CustomField>