unpackaged/main/default/objects/simplesms__SMS_Message__c/fields/simplesms__Lead__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related Lead.</description>
    <inlineHelpText>The related Lead.</inlineHelpText>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>SMS Messages</relationshipLabel>
    <relationshipName>SMS_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>