unpackaged/main/default/objects/simplesms__SMS_Message__c/fields/simplesms__Links_Clicked__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Links_Clicked__c</fullName>
    <description>The URL for the clicked link(s).</description>
    <inlineHelpText>The URL for the clicked link(s).</inlineHelpText>
    <label>Links Clicked</label>
    <type>TextArea</type>
</CustomField>