unpackaged/main/default/objects/simplesms__SMS_Message__c/fields/simplesms__Media_Attachments__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Media_Attachments__c</fullName>
    <description>The number of media attachments.</description>
    <inlineHelpText>The number of media attachments.</inlineHelpText>
    <label>Media Attachments</label>
    <summaryForeignKey>simplesms__Media__c.simplesms__SMS_Message__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>