unpackaged/main/default/objects/simplesms__SMS_Message__c/fields/simplesms__Media_Sent__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Media_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Going to be true whenever we send an attachment via SMS</description>
    <label>Media Sent</label>
    <type>Checkbox</type>
</CustomField>