unpackaged/main/default/objects/simplesms__SMS_Message__c/fields/simplesms__Message__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Message__c</fullName>
    <description>The body of the message.</description>
    <inlineHelpText>The body of the message.</inlineHelpText>
    <label>Message</label>
    <type>TextArea</type>
</CustomField>