unpackaged/main/default/objects/simplesms__SMS_Message__c/fields/simplesms__Message_Date__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Message_Date__c</fullName>
    <description>The date that this message was sent/received.</description>
    <inlineHelpText>The date that this message was sent/received.</inlineHelpText>
    <label>Message Date</label>
    <type>DateTime</type>
</CustomField>