unpackaged/main/default/objects/simplesms__SMS_Message__c/fields/simplesms__Message_Full__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Message_Full__c</fullName>
    <description>The full text of the message.  This is helpful when a message exceeds 255 characters.</description>
    <inlineHelpText>The full text of the message which allows for greater than 255 characters.</inlineHelpText>
    <label>Message (Full)</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>