unpackaged/main/default/objects/simplesms__SMS_Message__c/fields/simplesms__Message_Length__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Message_Length__c</fullName>
    <description>The number of characters in this message.</description>
    <formula>LEN( simplesms__Message__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of characters in this message.</inlineHelpText>
    <label>Message Length</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>