unpackaged/main/default/objects/simplesms__SMS_Message__c/fields/simplesms__Message_Segments__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Message_Segments__c</fullName>
    <description>The number of messages that were consumed to send this message.  One message segment is consumed for each 160 characters.</description>
    <formula>IF(
    CEILING(simplesms__Message_Length__c / 160) = 0
   ,1
   ,CEILING(simplesms__Message_Length__c / 160)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of messages that were consumed to send this message.  One message segment is consumed for each 160 characters.</inlineHelpText>
    <label>Message Segments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>