unpackaged/main/default/objects/simplesms__SMS_Message__c/fields/simplesms__Opportunity__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related Opportunity.</description>
    <inlineHelpText>The related Opportunity.</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>SMS Messages</relationshipLabel>
    <relationshipName>SMS_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>