unpackaged/main/default/objects/simplesms__SMS_Message__c/fields/simplesms__Preview_Only__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Preview_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This check is used to be mark true when sending SMS for preview only.</description>
    <label>Preview Only</label>
    <type>Checkbox</type>
</CustomField>