unpackaged/main/default/objects/simplesms__SMS_Message__c/fields/simplesms__Replied_To_Message__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Replied_To_Message__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Replied To Message</label>
    <referenceTo>simplesms__SMS_Message__c</referenceTo>
    <relationshipLabel>SMS Messages</relationshipLabel>
    <relationshipName>SMS_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>