unpackaged/main/default/objects/simplesms__SMS_Message__c/fields/simplesms__Short_Links__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Short_Links__c</fullName>
    <description>If this message contains tracked links the shortened version of each link is shown here.</description>
    <inlineHelpText>If this message contains tracked links the shortened version of each link is shown here.</inlineHelpText>
    <label>Short Links</label>
    <type>TextArea</type>
</CustomField>