unpackaged/main/default/objects/simplesms__SMS_Message__c/fields/simplesms__Sid__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Sid__c</fullName>
    <description>An external identifer for this message.</description>
    <inlineHelpText>An external identifer for this message.</inlineHelpText>
    <label>Sid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>