unpackaged/main/default/objects/simplesms__SMS_Message__c/fields/simplesms__Status__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Status__c</fullName>
    <description>The delivery status of this message.  Incoming messages are &quot;Received&quot;.  Outgoing messages are either &quot;Pending&quot;, &quot;Sent&quot;, &quot;Delivered&quot;, &quot;Undelivered&quot;, or &quot;Error&quot;.</description>
    <inlineHelpText>The delivery status of this message.  Incoming messages are &quot;Received&quot;.  Outgoing messages are either &quot;Pending&quot;, &quot;Sent&quot;, &quot;Delivered&quot;, &quot;Undelivered&quot;, or &quot;Error&quot;.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Replied</fullName>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Undelivered</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>