unpackaged/main/default/objects/simplesms__SMS_Message__c/fields/simplesms__To__c.field-meta.xml
<CustomField>
    <fullName>simplesms__To__c</fullName>
    <description>The phone number of the message recipient.</description>
    <inlineHelpText>The phone number of the message recipient.</inlineHelpText>
    <label>To</label>
    <length>80</length>
    <type>Text</type>
</CustomField>