unpackaged/main/default/objects/simplesms__SMS_Message__c/fields/simplesms__To_Phone__c.field-meta.xml
<CustomField>
    <fullName>simplesms__To_Phone__c</fullName>
    <description>The To number converted to a Phone field.</description>
    <inlineHelpText>The To number converted to a Phone field.</inlineHelpText>
    <label>To Phone</label>
    <type>Phone</type>
</CustomField>