unpackaged/main/default/objects/simplesms__SMS_Message__c/fields/simplesms__Type__c.field-meta.xml
<CustomField>
    <fullName>simplesms__Type__c</fullName>
    <description>The direction of this message.  The direction is either Outgoing or Incoming.</description>
    <inlineHelpText>The direction of this message.  The direction is either Outgoing or Incoming.</inlineHelpText>
    <label>Direction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Incoming</fullName>
            </value>
            <value>
                <fullName>Outgoing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>