unpackaged/main/default/objects/simplesms__SMS_Message__c/fields/simplesms__User__c.field-meta.xml
<CustomField>
    <fullName>simplesms__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The related User.</description>
    <inlineHelpText>The related User.</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SMS_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>