unpackaged/main/default/objects/simplesms__SMS_Message__c/listViews/Hialeah_Events_SMS_Message.listView-meta.xml
<ListView>
    <fullName>Hialeah_Events_SMS_Message</fullName>
    <filterScope>Queue</filterScope>
    <label>Hialeah SMS</label>
    <queue>Hialeah_SMS</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>