unpackaged/main/default/objects/simplesms__SMS_Message__c/listViews/Homestead_Events_SMS_Message.listView-meta.xml
<ListView>
    <fullName>Homestead_Events_SMS_Message</fullName>
    <filterScope>Queue</filterScope>
    <label>Homestead SMS</label>
    <queue>Homestead_SMS</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>