unpackaged/main/default/objects/simplesms__SMS_Message__c/listViews/Info_Center_SMS_Message.listView-meta.xml
<ListView>
    <fullName>Info_Center_SMS_Message</fullName>
    <filterScope>Queue</filterScope>
    <label>Info Center</label>
    <queue>Info_Center</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>