unpackaged/main/default/objects/simplesms__SMS_Message__c/listViews/Kendall_Events_SMS_Message.listView-meta.xml
<ListView>
    <fullName>Kendall_Events_SMS_Message</fullName>
    <filterScope>Queue</filterScope>
    <label>Kendall SMS</label>
    <queue>Kendall_SMS</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>