unpackaged/main/default/objects/simplesms__SMS_Message__c/listViews/MDC_Collegewide_SMS_SMS_Message.listView-meta.xml
<ListView>
    <fullName>MDC_Collegewide_SMS_SMS_Message</fullName>
    <filterScope>Queue</filterScope>
    <label>MDC-Collegewide-SMS</label>
    <queue>MDC_Collegewide_SMS</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>