unpackaged/main/default/objects/simplesms__SMS_Message__c/listViews/Medical_Events_SMS_Message.listView-meta.xml
<ListView>
    <fullName>Medical_Events_SMS_Message</fullName>
    <filterScope>Queue</filterScope>
    <label>Medical SMS</label>
    <queue>Medical_SMS</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>