unpackaged/main/default/objects/simplesms__SMS_Message__c/listViews/Meek_Events_SMS_Message.listView-meta.xml
<ListView>
    <fullName>Meek_Events_SMS_Message</fullName>
    <filterScope>Queue</filterScope>
    <label>Meek SMS</label>
    <queue>Meek_SMS</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>