unpackaged/main/default/objects/simplesms__SMS_Message__c/listViews/North_Events_SMS_Message.listView-meta.xml
<ListView>
    <fullName>North_Events_SMS_Message</fullName>
    <filterScope>Queue</filterScope>
    <label>North SMS</label>
    <queue>North_SMS</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>