unpackaged/main/default/objects/simplesms__SMS_Message__c/listViews/Padron_Events_SMS_Message.listView-meta.xml
<ListView>
    <fullName>Padron_Events_SMS_Message</fullName>
    <filterScope>Queue</filterScope>
    <label>Padron SMS</label>
    <queue>Padron_SMS</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>