unpackaged/main/default/objects/simplesms__SMS_Message__c/listViews/simplesms__All.listView-meta.xml
<ListView>
    <fullName>simplesms__All</fullName>
    <columns>simplesms__Preview_Only__c</columns>
    <columns>NAME</columns>
    <columns>Attendee__c</columns>
    <columns>simplesms__Campaign__c</columns>
    <columns>simplesms__User__c</columns>
    <columns>simplesms__Message__c</columns>
    <columns>simplesms__Message_Date__c</columns>
    <columns>simplesms__Type__c</columns>
    <columns>simplesms__Status__c</columns>
    <columns>simplesms__Error_Message__c</columns>
    <columns>simplesms__To__c</columns>
    <columns>simplesms__From_Num__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>simplesms__Bulk_Message__c</columns>
    <columns>simplesms__Media_Attachments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>simplesms__Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </filters>
    <label>All</label>
</ListView>