unpackaged/main/default/objects/simplesms__SMS_Message__c/listViews/simplesms__My_Incoming_Messages.listView-meta.xml
<ListView>
    <fullName>simplesms__My_Incoming_Messages</fullName>
    <columns>NAME</columns>
    <columns>simplesms__Message_Date__c</columns>
    <columns>simplesms__Message_Full__c</columns>
    <columns>simplesms__Media_Attachments__c</columns>
    <columns>simplesms__From_Phone__c</columns>
    <columns>simplesms__To_Phone__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>simplesms__Type__c</field>
        <operation>equals</operation>
        <value>Incoming</value>
    </filters>
    <label>My Incoming Messages</label>
</ListView>