unpackaged/main/default/objects/simplesms__SMS_Message__c/listViews/simplesms__My_Scheduled_Messages.listView-meta.xml
<ListView>
    <fullName>simplesms__My_Scheduled_Messages</fullName>
    <columns>simplesms__Message__c</columns>
    <columns>simplesms__Message_Date__c</columns>
    <columns>simplesms__Status__c</columns>
    <columns>simplesms__To__c</columns>
    <columns>simplesms__From_Num__c</columns>
    <columns>NAME</columns>
    <columns>simplesms__Media_Attachments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>simplesms__Status__c</field>
        <operation>equals</operation>
        <value>Scheduled</value>
    </filters>
    <label>My Scheduled Messages</label>
</ListView>