unpackaged/main/default/objects/simplesms__SMS_Message__c/listViews/West_Events_SMS_Message.listView-meta.xml
<ListView>
    <fullName>West_Events_SMS_Message</fullName>
    <filterScope>Queue</filterScope>
    <label>West SMS</label>
    <queue>West_SMS</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>